[REFACTOR/#185] 대학 일정 상제 조회 쿼리 페치조인 제거